Fix #34087: cycles shadow pass not properly normalized for non-progressive integrator with > 1 samples for a lamp.